--- a/assets/sass/modules/_navigation.scss
+++ b/assets/sass/modules/_navigation.scss
@@ -32,6 +32,10 @@ a {
 	max-width: rem(800);
 	padding: 1% 0;
 
+	@include media($tablet-portrait) {
+		max-width: initial;
+	}
+
 	li {
 		font-size: rem(22);
 		margin: 0 rem(10) 0 0;
@@ -173,7 +177,8 @@ a {
 .post-navigation {
 
 	.site-main & {
-		margin: 0 0 rem(24) 0;
+		// margin: 0 0 rem(24) 0;
+		margin: 0;
 		overflow: hidden;
 	} // .site-main &
 
